--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .weatherForm {
-    padding: 30px;
+    padding: 25px;
     box-shadow: 30px;
     border-radius: 10px;
     width: 500px;
@@ -45,11 +45,11 @@ body {
     cursor: pointer;   
 }
 
-.getLive {
+.getLocationButton {
     display: block;
     border: 0.25px solid black;
     border-radius: 20px;
-    height: 30px;
+    height: 80px;
     width: 200px;
     margin-left: 30%;
     color: black;
@@ -57,7 +57,7 @@ body {
     cursor: pointer;
 }
 
-.searchButton, .getLive, .input, .refreshButton {
+.searchButton, .getLocationButton, .input, .refreshButton {
     border: none;
     font-family: cursive;
 }
@@ -72,12 +72,12 @@ body {
     box-shadow: 0 4px 8px rgb(0, 208, 255);
 }
 
-.getLive:hover {
+.getLocationButton:hover {
     transform: scale(1.1);
     box-shadow: 0 4px 8px rgb(0, 208, 255);
 }
 
-.searchButton, .getLive, .refreshButton {
+.searchButton, .getLocationButton, .refreshButton {
     transition: 0.25s ease;
 }
 
@@ -108,4 +108,51 @@ body {
 .imgDiv {
     display: flex;
     justify-content: space-between;
+}
+
+.lds-ring,
+.lds-ring div {
+  box-sizing: border-box;
+}
+
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  margin-left: 40%;
+}
+
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid currentColor;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: white transparent transparent transparent;
+}
+
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
